--- a/src/main/resources/com/tbt/trainthebrain/questioning.fxml
+++ b/src/main/resources/com/tbt/trainthebrain/questioning.fxml
@@ -1,13 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.text.Text?>
 
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.tbt.trainthebrain.QuestioningController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
-</VBox>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="960.0" stylesheets="@main.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tbt.trainthebrain.QuestioningController">
+    <children>
+        <VBox layoutX="116.0" layoutY="-25.0" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <padding>
+                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+            </padding>
+         <children>
+            <HBox alignment="BOTTOM_LEFT" prefHeight="10.0" prefWidth="560.0">
+               <children>
+                  <Text fx:id="subTitleTtB" strokeType="OUTSIDE" strokeWidth="0.0" text="Train the Brain " />
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="subTitle" text="Lernmodus" />
+               </children>
+            </HBox>
+         </children>
+        </VBox>
+    </children>
+</AnchorPane>
