--- a/src/main/resources/com/tbt/trainthebrain/questioning.fxml
+++ b/src/main/resources/com/tbt/trainthebrain/questioning.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -17,6 +19,18 @@
                <children>
                   <Text fx:id="subTitleTtB" strokeType="OUTSIDE" strokeWidth="0.0" text="Train the Brain " />
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="subTitle" text="Lernmodus" />
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="0.0" prefWidth="920.0" spacing="2.0">
+               <children>
+                  <TextField prefHeight="26.0" prefWidth="81.0" />
+                  <Button mnemonicParsing="false" text="-" />
+                  <Button mnemonicParsing="false" text="+" />
+                  <Button mnemonicParsing="false" text="Start">
+                     <HBox.margin>
+                        <Insets left="20.0" />
+                     </HBox.margin>
+                  </Button>
                </children>
             </HBox>
          </children>
