--- a/src/main/resources/com/tbt/trainthebrain/main.css
+++ b/src/main/resources/com/tbt/trainthebrain/main.css
@@ -8,14 +8,39 @@
     -fx-text-fill: #ececec;
 }
 
+.stage{
+    -fx-background-color: #171616;
+}
+
 /* SubSites */
 #subTitleTtB{
     -fx-font-size: 2em;
     -fx-font-family: "Arial";
+    -fx-fill: #efefef;
 }
 
 .subTitle{
     -fx-font-size: 1.2em;
     -fx-font-family: "Arial";
     -fx-font-weight: bold;
+    -fx-fill: #e1e1e1;
+}
+
+/* Question Edit */
+.editListQuestionContainer{
+    -fx-background-color: #262626;
+    -fx-background-radius: 4px;
+    -fx-border-radius: 4px;
+    -fx-border-color: #2c2c2c;
+    -fx-border-style: solid;
+    -fx-border-width: 1px;
+}
+
+.editListQuestionContainer:hover {
+    -fx-background-color: #3d3d3d;
+    -fx-border-color: #464646;
+}
+
+.editListQuestionContainer .editListQuestionText {
+    -fx-fill: #eee;
 }
