--- a/src/main/resources/com/tbt/trainthebrain/questioning.fxml
+++ b/src/main/resources/com/tbt/trainthebrain/questioning.fxml
@@ -1,38 +1,137 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
+<?import org.controlsfx.glyphfont.Glyph?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="960.0" stylesheets="@main.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tbt.trainthebrain.QuestioningController">
+<AnchorPane maxHeight="1080.0" maxWidth="1280.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="960.0" stylesheets="@main.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tbt.trainthebrain.QuestioningController">
     <children>
         <VBox layoutX="116.0" layoutY="-25.0" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <padding>
-                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                <Insets bottom="20.0" />
             </padding>
          <children>
-            <HBox alignment="BOTTOM_LEFT" prefHeight="10.0" prefWidth="560.0">
+            <HBox fx:id="header" alignment="BOTTOM_CENTER" prefHeight="132.0" prefWidth="960.0">
                <children>
-                  <Text fx:id="subTitleTtB" strokeType="OUTSIDE" strokeWidth="0.0" text="Train the Brain " />
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="subTitle" text="Lernmodus" />
                </children>
+               <padding>
+                  <Insets bottom="10.0" />
+               </padding>
             </HBox>
-            <HBox alignment="CENTER" prefHeight="0.0" prefWidth="920.0" spacing="2.0">
+            <HBox prefHeight="0.0" prefWidth="960.0">
                <children>
-                  <TextField prefHeight="26.0" prefWidth="81.0" />
-                  <Button mnemonicParsing="false" text="-" />
-                  <Button mnemonicParsing="false" text="+" />
-                  <Button mnemonicParsing="false" text="Start">
-                     <HBox.margin>
-                        <Insets left="20.0" />
-                     </HBox.margin>
+                  <Button mnemonicParsing="false" text="Zurück" onAction="#backToMainClicked">
+                     <styleClass>
+                        <String fx:value="btn" />
+                        <String fx:value="btn-default" />
+                     </styleClass>
+                     <graphic>
+                        <Glyph fontFamily="FontAwesome" fontSize="15.0" icon="ARROW_CIRCLE_LEFT" />
+                     </graphic>
                   </Button>
                </children>
+               <VBox.margin>
+                  <Insets left="10.0" top="10.0" />
+               </VBox.margin>
             </HBox>
+            <HBox alignment="CENTER" prefHeight="0.0" prefWidth="960.0" VBox.vgrow="NEVER">
+               <children>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Es befinden sich aktuell">
+                     <styleClass>
+                        <String fx:value="text" />
+                        <String fx:value="lead" />
+                     </styleClass>
+                  </Text>
+                  <Text fx:id="countOfQuestions" strokeType="OUTSIDE" strokeWidth="0.0" text="#num">
+                     <styleClass>
+                        <String fx:value="text" />
+                        <String fx:value="lead" />
+                        <String fx:value="bold" />
+                     </styleClass>
+                     <HBox.margin>
+                        <Insets left="5.0" right="5.0" />
+                     </HBox.margin>
+                  </Text>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Fragen in der Datenbank">
+                     <styleClass>
+                        <String fx:value="text" />
+                        <String fx:value="lead" />
+                     </styleClass>
+                  </Text>
+               </children>
+               <padding>
+                  <Insets left="20.0" right="20.0" top="20.0" />
+               </padding>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="0.0" prefWidth="960.0">
+               <children>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Wie viele Fragen sollen gespielt werden?">
+                     <styleClass>
+                        <String fx:value="text" />
+                        <String fx:value="lead" />
+                     </styleClass>
+                  </Text>
+               </children>
+               <padding>
+                  <Insets bottom="20.0" left="20.0" right="20.0" top="5.0" />
+               </padding>
+            </HBox>
+            <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" VBox.vgrow="ALWAYS">
+               <children>
+                  <HBox alignment="TOP_CENTER" prefHeight="0.0" prefWidth="920.0" spacing="2.0">
+                     <children>
+                        <TextField fx:id="questionsToPlayCounter" prefHeight="88.0" prefWidth="112.0" styleClass="tfprimary" text="" />
+                        <Button fx:id="counterMinusBtn" contentDisplay="GRAPHIC_ONLY" mnemonicParsing="false" onAction="#counterChangeClicked" text="-">
+                           <styleClass>
+                              <String fx:value="btn" />
+                              <String fx:value="btn-default" />
+                              <String fx:value="large" />
+                           </styleClass>
+                           <graphic>
+                              <Glyph fontFamily="FontAwesome" fontSize="20.0" icon="CHEVRON_DOWN" />
+                           </graphic>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </Button>
+                        <Button fx:id="counterPlusBtn" contentDisplay="GRAPHIC_ONLY" mnemonicParsing="false" onAction="#counterChangeClicked" text="+">
+                           <styleClass>
+                              <String fx:value="btn" />
+                              <String fx:value="btn-default" />
+                              <String fx:value="large" />
+                           </styleClass>
+                           <graphic>
+                              <Glyph fontFamily="FontAwesome" fontSize="20.0" icon="CHEVRON_UP" />
+                           </graphic>
+                        </Button>
+                        <Button fx:id="startBtn" disable="true" mnemonicParsing="false" onAction="#startTrainingClicked" text="Start">
+                           <HBox.margin>
+                              <Insets left="20.0" />
+                           </HBox.margin>
+                           <styleClass>
+                              <String fx:value="btn" />
+                              <String fx:value="btn-success" />
+                              <String fx:value="large" />
+                           </styleClass>
+                           <graphic>
+                              <Glyph fontFamily="FontAwesome" fontSize="30.0" icon="PLAY_CIRCLE" />
+                           </graphic>
+                        </Button>
+                     </children>
+                  </HBox>
+               </children>
+               <padding>
+                  <Insets top="40.0" />
+               </padding>
+            </VBox>
          </children>
         </VBox>
     </children>
