--- a/src/main/resources/com/tbt/trainthebrain/main.css
+++ b/src/main/resources/com/tbt/trainthebrain/main.css
@@ -134,6 +134,12 @@
     -fx-text-fill: #ececec;
     -fx-fill: #ececec;
     -fx-padding: 10px 5px;
+    -fx-cursor: hand;
+}
+
+.check-box .box {
+    -fx-background-color: #171616;
+    -fx-border-color: #2d2d2d;
 }
 
 .text-field {
@@ -154,6 +160,36 @@
 .text-field.tfprimary:focused {
     -fx-text-fill: #676767;
     -fx-border-color: transparent transparent #676767 transparent ;
+}
+
+/* Text Area */
+.text-area{
+    -fx-background-color: rgba(255,255,255, .01);
+    -fx-text-fill: #d0d0d0;
+    -fx-border-color: #252525;
+    -fx-background-radius: 4px;
+    -fx-border-radius: 4px;
+}
+
+.text-area:focused{
+    -fx-background-color: rgba(255,255,255, .05);
+    -fx-text-fill: #efefef;
+}
+
+.text-area .scroll-pane {
+    -fx-background-color: transparent;
+}
+
+.text-area .scroll-pane .viewport{
+    -fx-background-color: transparent;
+}
+
+.text-area .scroll-pane .content{
+    -fx-background-color: transparent;
+}
+
+#questionText.text-area{
+    -fx-font-size: 1.2em;
 }
 
 .icon-selection{
