--- a/src/main/resources/com/tbt/trainthebrain/question-edit.fxml
+++ b/src/main/resources/com/tbt/trainthebrain/question-edit.fxml
@@ -42,6 +42,7 @@
                         <Label text="Antwort:" />
                         <CheckBox fx:id="answerCorrect0" mnemonicParsing="false" text="Korrekte Antwort" />
                         <TextArea fx:id="answerText0" prefHeight="68.0" prefWidth="920.0" />
+                         <TextField fx:id="answerId0"/>
                      </children>
                   </VBox>
                   <VBox prefHeight="200.0" prefWidth="100.0">
@@ -49,6 +50,7 @@
                         <Label text="Antwort:" />
                         <CheckBox fx:id="answerCorrect1" mnemonicParsing="false" text="Korrekte Antwort" />
                         <TextArea fx:id="answerText1" prefHeight="68.0" prefWidth="920.0" />
+                         <TextField fx:id="answerId1"/>
                      </children>
                   </VBox>
                   <VBox prefHeight="200.0" prefWidth="100.0">
@@ -56,6 +58,7 @@
                         <Label text="Antwort:" />
                         <CheckBox fx:id="answerCorrect2" mnemonicParsing="false" text="Korrekte Antwort" />
                         <TextArea fx:id="answerText2" prefHeight="68.0" prefWidth="920.0" />
+                         <TextField fx:id="answerId2"/>
                      </children>
                   </VBox>
                   <VBox prefHeight="200.0" prefWidth="100.0">
@@ -63,6 +66,7 @@
                         <Label text="Antwort:" />
                         <CheckBox fx:id="answerCorrect3" mnemonicParsing="false" text="Korrekte Antwort" />
                         <TextArea fx:id="answerText3" prefHeight="68.0" prefWidth="920.0" />
+                         <TextField fx:id="answerId3"/>
                      </children>
                   </VBox>
                </children>
