--- a/src/main/resources/com/tbt/trainthebrain/main.fxml
+++ b/src/main/resources/com/tbt/trainthebrain/main.fxml
@@ -9,12 +9,12 @@
 <?import javafx.scene.text.Text?>
 <?import org.controlsfx.glyphfont.Glyph?>
 
-<AnchorPane fx:id="mainRoot" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="960.0" styleClass="stage" stylesheets="@main.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tbt.trainthebrain.MainController">
+<AnchorPane fx:id="mainRoot" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="400.0" minWidth="700" prefHeight="700.0" prefWidth="960.0" styleClass="stage" stylesheets="@main.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tbt.trainthebrain.MainController">
    <children>
       <VBox layoutX="116.0" layoutY="-25.0" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <HBox fx:id="mainHeader" alignment="CENTER" minHeight="431.0" prefHeight="431.0" prefWidth="960.0" VBox.vgrow="NEVER" />
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
+            <HBox fx:id="mainHeader" alignment="CENTER" minHeight="430.0" prefHeight="430.0" prefWidth="960.0" VBox.vgrow="NEVER" />
+            <HBox fx:id="menuContainer" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
                <children>
                   <Button minHeight="40.0" minWidth="140.0" mnemonicParsing="false" onAction="#switchToLearningModeClick" styleClass="btn,btn-default,mainButton" text="Lernmodus starten">
                      <graphic>
@@ -28,8 +28,8 @@
                   </Button>
                </children>
             </HBox>
-            <HBox fx:id="mainHeader1" alignment="CENTER" />
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" VBox.vgrow="NEVER">
+            <HBox alignment="CENTER" />
+            <HBox fx:id="notes" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" VBox.vgrow="NEVER">
                <children>
                   <VBox alignment="CENTER" prefHeight="26.0" prefWidth="336.0">
                      <children>
