--- a/src/main/resources/com/tbt/trainthebrain/main.css
+++ b/src/main/resources/com/tbt/trainthebrain/main.css
@@ -173,6 +173,7 @@
     -fx-border-color: #2c2c2c;
     -fx-border-style: solid;
     -fx-border-width: 1px;
+    -fx-cursor: hand;
 }
 
 .editListQuestionContainer:hover {
