--- a/src/main/resources/com/tbt/trainthebrain/question-edit-overview.fxml
+++ b/src/main/resources/com/tbt/trainthebrain/question-edit-overview.fxml
@@ -1,88 +1,66 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="960.0" styleClass="stage" stylesheets="@main.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tbt.trainthebrain.QuestionEditOverviewController">
     <children>
-        <VBox layoutX="116.0" layoutY="-25.0" prefHeight="200.0" prefWidth="100.0" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <HBox fx:id="header" alignment="BOTTOM_CENTER" prefHeight="134.0" prefWidth="960.0" VBox.vgrow="NEVER">
+            <children>
+                <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="subTitle" text="Editor Modus" />
+            </children>
+            <padding>
+                <Insets bottom="10.0" />
+            </padding>
+        </HBox>
+        <VBox layoutX="116.0" layoutY="172.0" prefHeight="528.0" prefWidth="960.0" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="172.0">
             <padding>
                 <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
             </padding>
             <children>
-                <HBox alignment="BOTTOM_LEFT" prefHeight="10.0" prefWidth="560.0">
-                    <children>
-                        <Text fx:id="subTitleTtB" strokeType="OUTSIDE" strokeWidth="0.0" text="Train the Brain " />
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="subTitle" text="Editor Modus" />
-                    </children>
-                </HBox>
-            <VBox fx:id="editListQuestionContainerOutter" prefHeight="200.0" prefWidth="100.0" spacing="3.0" VBox.vgrow="ALWAYS">
+            <StackPane prefHeight="150.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
                <children>
-                  <HBox prefHeight="0.0" prefWidth="920.0" styleClass="editListQuestionContainer">
+                  <VBox fx:id="emptyNotificationContainer" alignment="CENTER" prefHeight="200.0" prefWidth="100.0" styleClass="text">
                      <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="editListQuestionText" text="Eine Einfache Frage steht hier die gegebenfalls auch länger sein kann?" />
+                        <ImageView fitHeight="194.0" fitWidth="211.0" opacity="0.2" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@img/MB_0021_cloud.png" />
+                           </image>
+                        </ImageView>
+                        <HBox alignment="CENTER" prefHeight="0.0" prefWidth="920.0">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Oh, es sieht so aus als ob hier nichts wäre...">
+                                 <styleClass>
+                                    <String fx:value="text" />
+                                    <String fx:value="lead" />
+                                 </styleClass>
+                              </Text>
+                           </children>
+                           <padding>
+                              <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                           </padding>
+                        </HBox>
                      </children>
-                     <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </padding>
-                  </HBox>
-                  <HBox prefHeight="0.0" prefWidth="920.0" styleClass="editListQuestionContainer">
-                     <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="editListQuestionText" text="Eine Einfache Frage steht hier die gegebenfalls auch länger sein kann?" />
-                     </children>
-                     <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </padding>
-                  </HBox>
-                  <HBox prefHeight="0.0" prefWidth="920.0" styleClass="editListQuestionContainer">
-                     <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="editListQuestionText" text="Eine Einfache Frage steht hier die gegebenfalls auch länger sein kann?" />
-                     </children>
-                     <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </padding>
-                  </HBox>
-                  <HBox prefHeight="0.0" prefWidth="920.0" styleClass="editListQuestionContainer">
-                     <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="editListQuestionText" text="Eine Einfache Frage steht hier die gegebenfalls auch länger sein kann?" />
-                     </children>
-                     <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </padding>
-                  </HBox>
-                  <HBox prefHeight="0.0" prefWidth="920.0" styleClass="editListQuestionContainer">
-                     <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="editListQuestionText" text="Eine Einfache Frage steht hier die gegebenfalls auch länger sein kann?" />
-                     </children>
-                     <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </padding>
-                  </HBox>
-                  <HBox prefHeight="0.0" prefWidth="920.0" styleClass="editListQuestionContainer">
-                     <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="editListQuestionText" text="Eine Einfache Frage steht hier die gegebenfalls auch länger sein kann?" />
-                     </children>
-                     <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </padding>
-                  </HBox>
-                  <HBox prefHeight="0.0" prefWidth="920.0" styleClass="editListQuestionContainer">
-                     <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="editListQuestionText" text="Eine Einfache Frage steht hier die gegebenfalls auch länger sein kann?" />
-                     </children>
-                     <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </padding>
-                  </HBox>
+                  </VBox>
+                  <VBox fx:id="editListQuestionContainerOutter" prefHeight="200.0" prefWidth="100.0" spacing="3.0" />
                </children>
-            </VBox>
+            </StackPane>
             <HBox alignment="BOTTOM_RIGHT" prefHeight="0.0" prefWidth="920.0">
                <children>
-                  <Button mnemonicParsing="false" text="Frage hinzufügen" />
+                  <Button mnemonicParsing="false" onAction="#addNewQuestionClicked" text="Frage hinzufügen">
+                     <styleClass>
+                        <String fx:value="btn" />
+                        <String fx:value="btn-default" />
+                        <String fx:value="lead" />
+                     </styleClass></Button>
                </children>
             </HBox>
             </children>
