--- a/src/main/resources/com/tbt/trainthebrain/main.css
+++ b/src/main/resources/com/tbt/trainthebrain/main.css
@@ -40,10 +40,16 @@
     -fx-cursor: hand;
     -fx-background-radius: 4px;
     -fx-border-radius: 4px;
+    -fx-border-width: 1px;
 }
 
 .btn-default {
     -fx-background-color: #262626;
+    -fx-border-color: #313131;
+}
+
+.border-remove{
+    -fx-border-width: 0;
 }
 
 .btn-default .text {
@@ -62,27 +68,23 @@
 
 .btn-primary{
     -fx-background-color: #15447a;
-    -fx-border-width: 1px;
     -fx-border-color: #186493;
 
 }
 
 .btn-primary:hover{
     -fx-background-color: #184e8c;
-    -fx-border-width: 1px;
     -fx-border-color: #186798;
 }
 
 .btn-success{
     -fx-background-color: #1c7a15;
-    -fx-border-width: 1px;
     -fx-border-color: #209318;
 
 }
 
 .btn-success:hover{
     -fx-background-color: #208f18;
-    -fx-border-width: 1px;
     -fx-border-color: #22a219;
 }
 
@@ -231,9 +233,14 @@
     -fx-border-radius: 4px;
 }
 
+.text-area.answerTextArea {
+    -fx-min-height: 80px;
+}
+
 .text-area:focused{
     -fx-background-color: rgba(255,255,255, .05);
     -fx-text-fill: #efefef;
+    -fx-border-color: #424242;
 }
 
 .text-area .scroll-pane {
@@ -254,4 +261,38 @@
 
 .icon-selection{
     -fx-font-size: 30px;
+}
+
+.scroll-pane {
+    -fx-background-color: transparent;
+}
+
+.scroll-pane > .viewport {
+    -fx-background-color: transparent;
+}
+
+.scroll-bar:horizontal, .scroll-bar:vertical{
+    -fx-background-color:transparent;
+}
+
+.increment-button, .decrement-button {
+    -fx-background-color: transparent;
+    -fx-border-color: transparent;
+}
+
+.scroll-bar:horizontal .track,
+.scroll-bar:vertical .track{
+    -fx-background-color: transparent;
+    -fx-border-color: transparent;
+    -fx-background-radius: 0em;
+}
+
+.scroll-bar:horizontal .thumb,
+.scroll-bar:vertical .thumb {
+    -fx-background-color: rgba(255, 255, 255, 0.1);
+    -fx-background-radius: 5em;
+}
+
+.scroll-pane > .corner {
+    -fx-background-color: transparent;
 }
