--- a/src/main/resources/com/tbt/trainthebrain/question-edit.fxml
+++ b/src/main/resources/com/tbt/trainthebrain/question-edit.fxml
@@ -1,82 +1,152 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<?import javafx.scene.control.TextField?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="960.0" styleClass="stage" stylesheets="@main.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tbt.trainthebrain.QuestionEditController">
     <children>
-        <VBox layoutX="116.0" layoutY="-25.0" prefHeight="200.0" prefWidth="100.0" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <HBox fx:id="header" alignment="BOTTOM_CENTER" prefHeight="134.0" prefWidth="960.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" VBox.vgrow="NEVER">
+            <children>
+                <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="subTitle" text="Fragen Editor" />
+            </children>
+            <padding>
+                <Insets bottom="10.0" />
+            </padding>
+        </HBox>
+        <VBox layoutX="116.0" layoutY="129.0" prefHeight="571.0" prefWidth="960.0" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="130.0">
             <padding>
                 <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
             </padding>
             <children>
-                <HBox alignment="BOTTOM_LEFT" prefHeight="10.0" prefWidth="560.0">
-                    <children>
-                        <Text fx:id="subTitleTtB" strokeType="OUTSIDE" strokeWidth="0.0" text="Train the Brain " />
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="subTitle" text="Frage bearbeiten" />
-                    </children>
-                </HBox>
             <VBox fx:id="editListQuestionContainerOutter" prefHeight="200.0" prefWidth="100.0" spacing="10.0" VBox.vgrow="ALWAYS">
                <children>
-                   <TextField fx:id="id" text="0" />
-                  <Label text="Fragentext:" />
-                  <TextArea fx:id="questionText" prefHeight="200.0" prefWidth="200.0" />
+                   <TextField fx:id="id" maxHeight="0.0" minHeight="0.0" prefHeight="0.0" text="0" />
+                  <Label styleClass="bold" text="Frage:">
+                     <font>
+                        <Font size="15.0" />
+                     </font></Label>
+                  <TextArea fx:id="questionText" minHeight="100.0" prefHeight="150.0" prefWidth="920.0" wrapText="true" />
                   <HBox prefHeight="100.0" prefWidth="200.0">
                      <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Antworten" />
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Antworten">
+                           <styleClass>
+                              <String fx:value="text" />
+                              <String fx:value="lead" />
+                              <String fx:value="bold" />
+                           </styleClass></Text>
                      </children>
                      <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                        <Insets top="30.0" />
                      </padding>
                   </HBox>
-                  <VBox prefHeight="200.0" prefWidth="100.0">
-                     <children>
-                        <Label text="Antwort:" />
-                        <CheckBox fx:id="answerCorrect0" mnemonicParsing="false" text="Korrekte Antwort" />
-                        <TextArea fx:id="answerText0" prefHeight="68.0" prefWidth="920.0" />
-                         <TextField fx:id="answerId0" text="0"/>
-                     </children>
-                  </VBox>
-                  <VBox prefHeight="200.0" prefWidth="100.0">
-                     <children>
-                        <Label text="Antwort:" />
-                        <CheckBox fx:id="answerCorrect1" mnemonicParsing="false" text="Korrekte Antwort" />
-                        <TextArea fx:id="answerText1" prefHeight="68.0" prefWidth="920.0" />
-                         <TextField fx:id="answerId1" text="0"/>
-                     </children>
-                  </VBox>
-                  <VBox prefHeight="200.0" prefWidth="100.0">
-                     <children>
-                        <Label text="Antwort:" />
-                        <CheckBox fx:id="answerCorrect2" mnemonicParsing="false" text="Korrekte Antwort" />
-                        <TextArea fx:id="answerText2" prefHeight="68.0" prefWidth="920.0" />
-                         <TextField fx:id="answerId2" text="0"/>
-                     </children>
-                  </VBox>
-                  <VBox prefHeight="200.0" prefWidth="100.0">
-                     <children>
-                        <Label text="Antwort:" />
-                        <CheckBox fx:id="answerCorrect3" mnemonicParsing="false" text="Korrekte Antwort" />
-                        <TextArea fx:id="answerText3" prefHeight="68.0" prefWidth="920.0" />
-                         <TextField fx:id="answerId3" text="0"/>
-                     </children>
-                  </VBox>
+                  <ScrollPane fitToWidth="true" hbarPolicy="NEVER" pickOnBounds="false" VBox.vgrow="ALWAYS">
+                     <content>
+                        <VBox>
+                           <children>
+                              <VBox prefHeight="0.0" prefWidth="902.0">
+                                 <children>
+                                    <AnchorPane>
+                                       <children>
+                                          <Label styleClass="bold" text="Antwort 1:" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="0.0" />
+                                          <CheckBox fx:id="answerCorrect0" layoutY="16.0" mnemonicParsing="false" text="Korrekte Antwort" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                       </children>
+                                    </AnchorPane>
+                                    <TextArea fx:id="answerText0" prefHeight="68.0" prefWidth="920.0" styleClass="answerTextArea" wrapText="true" />
+                                     <TextField fx:id="answerId0" maxHeight="0.0" minHeight="0.0" prefHeight="0.0" text="0" />
+                                 </children>
+                              </VBox>
+                              <VBox prefHeight="0.0" prefWidth="902.0">
+                                 <children>
+                                    <AnchorPane>
+                                       <children>
+                                          <Label styleClass="bold" text="Antwort 2:" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="0.0" />
+                                          <CheckBox fx:id="answerCorrect1" layoutY="16.0" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" text="Korrekte Antwort" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                       </children>
+                                    </AnchorPane>
+                                    <TextArea fx:id="answerText1" prefHeight="68.0" prefWidth="920.0" styleClass="answerTextArea" wrapText="true" />
+                                     <TextField fx:id="answerId1" maxHeight="0.0" minHeight="0.0" prefHeight="0.0" text="0" />
+                                 </children>
+                              </VBox>
+                              <VBox prefHeight="0.0" prefWidth="902.0">
+                                 <children>
+                                    <AnchorPane>
+                                       <children>
+                                          <CheckBox fx:id="answerCorrect2" mnemonicParsing="false" text="Korrekte Antwort" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                          <Label styleClass="bold" text="Antwort 3:" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="0.0" />
+                                       </children>
+                                    </AnchorPane>
+                                    <TextArea fx:id="answerText2" prefHeight="68.0" prefWidth="920.0" styleClass="answerTextArea" wrapText="true" />
+                                     <TextField fx:id="answerId2" maxHeight="0.0" minHeight="0.0" prefHeight="0.0" text="0" />
+                                 </children>
+                              </VBox>
+                              <VBox prefHeight="0.0" prefWidth="902.0">
+                                 <children>
+                                    <AnchorPane prefHeight="0.0" prefWidth="920.0">
+                                       <children>
+                                          <Label styleClass="bold" text="Antwort 4:" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="0.0" />
+                                          <CheckBox fx:id="answerCorrect3" layoutY="16.0" mnemonicParsing="false" text="Korrekte Antwort" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                       </children>
+                                    </AnchorPane>
+                                    <TextArea fx:id="answerText3" prefHeight="68.0" prefWidth="920.0" styleClass="answerTextArea" wrapText="true" />
+                                     <TextField fx:id="answerId3" maxHeight="0.0" minHeight="0.0" prefHeight="0.0" text="0" />
+                                 </children>
+                              </VBox>
+                           </children>
+                        </VBox>
+                     </content>
+                     <padding>
+                        <Insets right="10.0" />
+                     </padding>
+                  </ScrollPane>
                </children>
             </VBox>
-            <HBox alignment="BOTTOM_RIGHT" prefHeight="0.0" prefWidth="920.0">
+            <GridPane>
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
                <children>
-                  <Button mnemonicParsing="false" onAction="#cancelQuestionEditClick" text="Abbrechen" />
-                  <Button mnemonicParsing="false" onAction="#saveQuestionEditClick" text="Speichern" />
+                  <VBox prefHeight="200.0" prefWidth="100.0">
+                     <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="Es müssen mindestens eine Frage sowie zwei Antworten eingetragen werden." wrappingWidth="543.7747497558594" />
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="Mindestens eine Antwort muss als korrekt markiert werden." />
+                     </children>
+                  </VBox>
+                  <HBox alignment="BOTTOM_RIGHT" prefHeight="30.0" prefWidth="258.0" spacing="10.0" GridPane.columnIndex="1">
+                     <children>
+                        <Button mnemonicParsing="false" onAction="#cancelQuestionEditClick" text="Abbrechen">
+                           <styleClass>
+                              <String fx:value="btn" />
+                              <String fx:value="btn-default" />
+                           </styleClass>
+                        </Button>
+                        <Button mnemonicParsing="false" onAction="#saveQuestionEditClick" text="Speichern">
+                           <styleClass>
+                              <String fx:value="btn" />
+                              <String fx:value="btn-success" />
+                           </styleClass>
+                        </Button>
+                     </children>
+                  </HBox>
                </children>
-            </HBox>
+            </GridPane>
             </children>
         </VBox>
     </children>
